# slambook2

./: .gitignore  .gitmodules  .~ambook2_笔记.docx  LICENSE  README.md  RECORD.md  eigenGeometry  errata.cls  errata.tex  matrixExtractAssign  slambook2_习题解答.docx  slambook2_笔记.docx  useGeometry  useSophus
ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch11/: feature_training.cpp  loop_closure.cpp
ch12/: CMakeLists.txt
ch12/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_RGBD/data/: pose.txt
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: CMakeLists.txt  run_kitti_stereo.cpp
ch13/cmake_modules/: FindCSparse.cmake  FindGlog.cmake
ch13/config/: default.yaml
ch13/include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
ch13/src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
ch13/test/: CMakeLists.txt  test_stereo_init.cpp  test_triangulation.cpp
ch2/: Background  Background.md  Background.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  helloSLAM  helloSLAM.cpp  helloSLAM2.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello  useHello.cpp
ch3/: CMakeLists.txt
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory  plotTrajectory.cpp  trajectory.txt  trajectory_F.txt  trajectory_T.txt
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp  linearEqSolution.cpp  matrixExtractAssign.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp  useGeometry.cpp
ch3/visualizeGeometry/: CMakeLists.txt  Readme.txt  visualizeGeometry.cpp
ch4/: CMakeLists.txt  readme.txt  useSophus.cpp
ch4/example/: CMakeLists.txt  estimated.txt  groundtruth.txt  trajectoryError.cpp
ch5/: CMakeLists.txt  readme.txt
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: CMakeLists.txt  joinMap.cpp
ch5/stereo/: CMakeLists.txt  stereoVision.cpp
ch6/: CMakeLists.txt  ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp  readme.txt
ch6/cmake/: FindG2O.cmake
ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch9/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.cpp  common.h  rotation.h
